--- a/app/views/admin/messages/edit.html.erb
+++ b/app/views/admin/messages/edit.html.erb
@@ -10,8 +10,8 @@
   </div>
 
   <div>
-    <%= form.label :body %>
-    <%= form.text_field :body %>
+    <%= form.label :content %>
+    <%= form.text_field :content %>
   </div>
 
   <%= form.submit %>
