--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -1,6 +1,6 @@
-<%= form_with model: message, url: [chat, :messages], class: 'sticky bottom-0 border-t bg-white flex items-start py-2.5 px-4 gap-2.5', id: 'message-form' do |form| %>
+<%= form_with model: message, url: [chat, :messages], class: 'sticky bottom-0 border-t bg-white flex items-start py-2.5 px-4 gap-2.5', id: 'message-form', data: { ai_chats_target: 'form', action: 'turbo:submit-start->ai-chats#submitStart turbo:submit-end->ai-chats#submitEnd' } do |form| %>
   <div>
-    <%= form.text_field :body, class: 'w-full max-w-80 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500' %>
+    <%= form.text_field :content, class: 'w-full max-w-80 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500' %>
     <% if message.errors.present? %>
       <p class="text-xs text-danger-500"><%= message.errors.full_messages.first %></p>
     <% end %>
@@ -8,5 +8,11 @@
 
   <%= button_tag type: 'submit', class: 'bg-primary-500 text-white px-4 py-2.5 rounded-xl font-semibold' do %>
     Send <i class="fas fa-paper-plane"></i>
+  <% end %>
+
+  <% if chat.ai_chat? %>
+    <div data-ai-chats-target="spinner" class="hidden">
+      <i class="fas fa-circle-notch fa-xl animate-spin"></i>
+    </div>
   <% end %>
 <% end %>
