--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,5 +1,6 @@
 <div
   id=<%= dom_id(message) %>
+  data-role=<%= message.role %>
   <% if scroll_into_view %>
     data-scroll-target="scrollable"
   <% end %>
@@ -15,7 +16,7 @@
     <% end %>
     <div class="flex items-center my-3 gap-1.5 msg-<%= message.account&.id %>">
       <p class="relative rounded-xl border text-sm p-2.5 bg-white overflow-break-word msg-color-<%= message.account&.id %> msg-text-<%= message.account&.id %> max-w-4/5 text-left">
-        <%= message.body %>
+        <%= message.content %>
         <span class="text-gray-500 text-xs absolute -bottom-5 whitespace-nowrap left-0 created-at-alignment-<%= message.account&.id %>"><%= message.created_at.strftime("%b %d, %Y - %I:%M %p") %></span>
       </p>
       <button class="hidden edit-ellipsis-<%= message.account&.id %>">
