--- a/app/views/chats/_chat_tab.html.erb
+++ b/app/views/chats/_chat_tab.html.erb
@@ -27,7 +27,7 @@
   <div class="whitespace-nowrap">
     <div>
       <p class="font-semibold"><%= account.full_name %></p>
-      <p class="text-sm text-gray-700"><%= latest_message.body %></p>
+      <p class="text-sm text-gray-700"><%= latest_message.content %></p>
       <p class="text-xs text-gray-600"><%= chat.updated_at %></p>
     </div>
   </div>
