--- a/app/views/chats/_group_chat_tab.html.erb
+++ b/app/views/chats/_group_chat_tab.html.erb
@@ -30,7 +30,7 @@
         <% end %>
       </div>
 
-      <p class="text-sm text-gray-700" data-sidebar-target="hideable"><%= latest_message.body %></p>
+      <p class="text-sm text-gray-700" data-sidebar-target="hideable"><%= latest_message.content %></p>
       <p class="text-xs text-gray-600" data-sidebar-target="hideable"><%= chat.updated_at %></p>
     </div>
   </div>
