tab id and stream id

--- a/app/views/chats/_chat_tab.html.erb
+++ b/app/views/chats/_chat_tab.html.erb
@@ -4,7 +4,7 @@
 
 <%=
   link_to chat,
-    id: chat_tab_id(chat),
+    id: chat.tab_id,
     class: 'flex items-center transition-all p-2.5 block',
     data: {
       turbo_frame: 'chat',
