--- a/app/views/chats/details.html.erb
+++ b/app/views/chats/details.html.erb
@@ -10,6 +10,6 @@
       <% end %>
     </div>
     <hr />
-    <p><strong>Latest Message:</strong> <%= @messages.last.body %></p>
+    <p><strong>Latest Message:</strong> <%= @messages.last.content %></p>
   </section>
 <% end %>
