--- a/app/views/chats/group.html.erb
+++ b/app/views/chats/group.html.erb
@@ -31,6 +31,7 @@
       data-sidebar-show-value="true"
       data-sidebar-tab-show-classes-value=<%= ['gap-2.5'].to_json %>
       data-sidebar-sidebar-hide-classes-value=<%= ['w-16'].to_json %>
+      data-sidebar-sidebar-toggle-button-classes-value=<%= ['hidden'].to_json %>
     >
       <% [{ direction: 'right', button: 'hideButton'}, { direction: 'left', button: 'showButton'}].each do |toggle_button| %>
         <button class="z-50 w-8 h-8 shadow-md bg-white rounded-full p-1 absolute -top-2 -right-4 text-primary-500" data-sidebar-target=<%= toggle_button[:button] %> data-action="sidebar#toggleSidebar">
