--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -1,7 +1,6 @@
-<div>
-  <h1 class="font-bold text-4xl">Chats#show</h1>
-  <p>Find me in app/views/chats/show.html.erb</p>
-</div>
+<%= content_for :style do %>
+  <%= ChatsHelper::ChatStyleBuilder.new(current_account).build %>
+<% end %>
 
 <div class="container border rounded-lg">
   <%= render 'chat', chat: @chat, messages: @messages, message: @message %>
