Rubocop fix + slight refactoring

--- a/app/views/chats/ai_chats.html.erb
+++ b/app/views/chats/ai_chats.html.erb
@@ -1,13 +1,12 @@
+<%= content_for :style do %>
+  <%= ChatsHelper::ChatStyleBuilder.build(current_account) %>
+<% end %>
 
 <section
   class="container"
   data-controller="chats"
   data-chats-toggle-classes-value= <%= ['bg-primary-500', 'text-white', 'font-semibold'].to_json %>
 >
-  <%= content_for :style do %>
-    <%= ChatsHelper::ChatStyleBuilder.new(current_account).build %>
-  <% end %>
-
   <nav class="flex flex-nowrap overflow-x-auto gap-1.5">
     <% @chats.each do |chat| %>
       <%= link_to chat.chat_title, chat, class: 'border rounded px-2.5 py-1.5', data: { turbo_frame: 'chat', chats_target: 'chatTab', id: dom_id(chat) } %>
