Move autocompletion to job

--- a/app/views/admin/solid_queues/index.html.erb
+++ b/app/views/admin/solid_queues/index.html.erb
@@ -1,1 +1,8 @@
-<%= @jobs.count %>
+<%= @blocked_executions.count %>
+<%= @claimed_executions.count %>
+<%= @failed_executions.count %>
+<%= @pauses.count %>
+<%= @processes.count %>
+<%= @ready_executions.count %>
+<%= @scheduled_executions.count %>
+<%= @semaphores.count %>
