--- a/app/views/admin/prediction_params/edit.html.erb
+++ b/app/views/admin/prediction_params/edit.html.erb
@@ -10,7 +10,7 @@
 
     <div>
       <%= form.label :param_type %>
-      <%= form.select :param_type, PredictionParam.param_types.keys %>
+      <%= form.select :param_type, Ai::PredictionParam.param_types.keys %>
     </div>
 
     <div>
