--- a/app/views/admin/prediction_params/new.html.erb
+++ b/app/views/admin/prediction_params/new.html.erb
@@ -10,7 +10,7 @@
 
     <div data-controller="toggle" data-toggle-toggled-id-value="<%= @prediction_param.param_type %>">
       <%= form.label :param_type %>
-      <%= form.select :param_type, PredictionParam.param_types.keys, {}, data: { action: 'toggle#toggle' } %>
+      <%= form.select :param_type, Ai::PredictionParam.param_types.keys, {}, data: { action: 'toggle#toggle' } %>
 
       <div data-toggle-target="toggleable" data-toggle-id="options" data-controller="clone" data-clone-target="cloneContainer">
         <button type="button" data-action="clone#cloneTargetToContainer">Add more possible values</button>
