--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,5 +1,5 @@
-<header class="w-full flex items-center justify-between border-b px-4 md:px-8 <%= 'py-1.5' if !user_signed_in? %>">
-  <div class="flex items-center gap-8 md:gap-16">
+<header class="w-full flex items-center justify-between border-b px-4 py-2 md:p-0 md:px-8">
+  <div class="hidden items-center md:flex gap-16">
     <%= link_to root_path, class: 'flex-center gap-1.5 hover:text-primary-500' do %>
       <i class="fa-lg fab fa-rocketchat"></i>
       <strong class="text-2xl font-serif">Chatai</strong>
@@ -12,9 +12,39 @@
     </nav>
   </div>
 
+  <div
+    class="flex md:hidden transition-all"
+    data-controller="sidebar"
+    data-sidebar-show-value="false"
+    data-sidebar-sidebar-hide-classes-value=<%= ['w-0'].to_json %>
+  >
+    <button data-action="click->sidebar#toggleSidebar">
+      <i class="fa-solid fa-bars"></i>
+    </button>
+    <aside
+      class="w-0 fixed h-screen z-50 top-0 left-0 bg-white overflow-hidden transition-all duration-150"
+      data-sidebar-target="sidebar"
+    >
+      <nav class="flex flex-col items-start gap-3.5 p-6">
+        <%= link_to root_path, class: 'flex-center gap-1.5 hover:text-primary-500' do %>
+          <i class="fa-lg fab fa-rocketchat"></i>
+          <strong class="text-2xl font-serif">Chatai</strong>
+        <% end %>
+        <% (user_signed_in? ? authed_routes : unauthed_routes).each do |route_text, route_data|  %>
+          <%= link_to route_text, route_data[:route], class: "font-semibold hover:text-primary-500 #{'border-b-2 border-b-primary-500' if route_data[:controller] == params[:controller] && route_data[:action] == params[:action]}" %>
+        <% end %>
+      </nav>
+    </aside>
+    <div
+      class="z-[49] hidden w-screen h-screen bg-black fixed top-0 left-0 opacity-50"
+      data-sidebar-target="hideable"
+      data-action="click->sidebar#closeSidebar"
+    ></div>
+  </div>
+
   <% if user_signed_in? %>
     <div
-      class="relative"
+      class="relative min-w-fit"
       data-controller="dropdown"
       data-dropdown-other-toggle-classes-value=<%= %w[px-4 py-2.5].to_json %>
     >
@@ -28,13 +58,13 @@
         }
       ) %>
       <nav
-        class="absolute border w-0 h-0 bg-white shadow z-[60] right-0 top-12 rounded-xl transition-all duration-100 overflow-hidden"
+        class="absolute w-0 h-0 bg-white shadow z-[48] right-0 top-12 rounded-xl transition-all duration-100 overflow-hidden"
         data-dropdown-target="dropdown"
       >
-        <ul>
+        <ul class="flex flex-col gap-1.5">
           <li class="flex items-center gap-1.5">
             <i class="fas fa-user-circle"></i>
-            <%= link_to 'Account', current_account %>
+            <%= link_to 'Account', current_account, class: 'whitespace-nowrap' %>
           </li>
           <li class="flex items-center gap-1.5">
             <i class="fas fa-sign-out-alt"></i>
@@ -42,13 +72,15 @@
           </li>
           <li class="flex items-center gap-1.5">
             <i class="fas fa-key"></i>
-            <%= link_to 'Account Tokens', [:account_tokens] %>
+            <%= link_to 'Account Tokens', [:account_tokens], class: 'whitespace-nowrap' %>
           </li>
         </ul>
       </nav>
     </div>
   <% else %>
-    <%= link_to 'Register', new_user_registration_path %>
-    <%= link_to 'Login', new_user_session_path %>
+    <div class="flex flex-row gap-4">
+      <%= link_to 'Login', new_user_session_path, class: 'btn-ghost' %>
+      <%= link_to 'Register', new_user_registration_path, class: 'btn-primary' %>
+    </div>
   <% end %>
 </header>
