--- a/app/views/shared/_flash.html.erb
+++ b/app/views/shared/_flash.html.erb
@@ -1,3 +1,13 @@
-<div data-controller="flash" class="<%= %i[bg_light text].map { |color_type| flash_color(color_type) }.join(' ') %>">
-  <%= flash[:alert] || flash[:notice] %>
-</div>
+<% if notice || alert %>
+  <div data-controller="flash" class="shadow-lg rounded-lg border bg-white p-4">
+      <% if alert %>
+        <i class="fa-2xl fas fa-times-circle text-red-500"></i>
+      <% elsif notice %>
+        <i class="fa-2xl fas fa-check-circle text-green-500"></i>
+      <% else %>
+        <i class="fa-2xl fas fa-info-circle text-blue-500"></i>
+      <% end %>
+      <span class="ml-1.5"><%= alert || notice %></span>
+    </div>
+  </div>
+<% end %>
