--- a/app/views/chats/index.html.erb
+++ b/app/views/chats/index.html.erb
@@ -2,7 +2,7 @@
   <%= ChatsHelper::ChatStyleBuilder.build(current_account) %>
 <% end %>
 
-<section class="container">
+<section class="container mt-6 px-4">
   <div
     class="w-full flex flex-col items-center md:flex-row md:items-center gap-2.5"
     data-controller="chats"
