--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -25,17 +25,10 @@
 
   <body>
     <main class="flex flex-col">
-      <%= render 'shared/navbar' %>
-
-      <div id="flash" class="fixed top-12 right-12 z-[60]">
+      <div id="flash" class="fixed top-12 right-12">
         <%= render 'shared/flash' %>
       </div>
 
-      <section><%= yield %></section>
-
-      <%= render 'shared/footer' %>
-
-      <%= turbo_frame_tag 'dialog' %>
-    </main>
+      <%= yield %>
   </body>
 </html>
