--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,45 +1,79 @@
-<h2>Sign up</h2>
-
 <%# Build account for correct initialization of fields_for :account %>
 <% resource.build_account %>
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render 'users/shared/error_messages', resource: resource %>
+<section class="min-h-screen min-w-screen bg-gradient-to-r from-primary-500 to-secondary-500 flex-center">
+  <div class="my-2 md:my-6 bg-white rounded-xl shadow p-8">
+    <h2 class="font-black text-3xl text-center my-2.5 text-primary-500">Sign Up</h2>
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <div class="flex flex-col gap-3">
+        <div class="flex flex-col gap-0.5">
+          <div class="focus-within:text-primary-600 text-xs focus-within:font-semibold font-normal duration-150">
+            <%= f.label :email %>
+            <%= f.email_field :email, class: 'text-sm pb-1.5 text-black font-normal w-full border-transparent focus:border-b-2 focus:border-transparent border-b-gray-400 focus:ring-0 p-0 focus:border-b-primary-500', autofocus: true, autocomplete: "email", placeholder: 'johndoe@email.com' %>
+          </div>
+          <% if resource.errors.full_messages_for(:email).present? %>
+            <p class="text-danger-500 text-xs"><%= resource.errors.full_messages_for(:email).first %></p>
+          <% end %>
+        </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+        <div class="flex flex-col gap-0.5">
+          <div class="focus-within:text-primary-600 text-xs focus-within:font-semibold font-normal duration-150">
+            <%= f.label :password %>
+            <%= f.password_field :password, class: 'text-sm pb-1.5 text-black font-normal w-full border-transparent focus:border-b-2 focus:border-transparent border-b-gray-400 focus:ring-0 p-0 focus:border-b-primary-500', autofocus: true, autocomplete: "new-password" %>
+          </div>
+          <% if resource.errors.full_messages_for(:password).present? %>
+            <p class="text-danger-500 text-xs"><%= resource.errors.full_messages_for(:password).first %></p>
+          <% end %>
+        </div>
+
+        <div class="flex flex-col gap-0.5">
+          <div class="focus-within:text-primary-600 text-xs focus-within:font-semibold font-normal duration-150">
+            <%= f.label :password_confirmation %>
+            <%= f.password_field :password_confirmation, class: 'text-sm pb-1.5 text-black font-normal w-full border-transparent focus:border-b-2 focus:border-transparent border-b-gray-400 focus:ring-0 p-0 focus:border-b-primary-500', autofocus: true, autocomplete: "new-password" %>
+          </div>
+          <% if resource.errors.full_messages_for(:password_confirmation).present? %>
+            <p class="text-danger-500 text-xs"><%= resource.errors.full_messages_for(:password_confirmation).first %></p>
+          <% end %>
+        </div>
+
+        <%= f.fields_for :account do |account_f| %>
+          <div class="flex flex-col gap-0.5">
+            <div class="focus-within:text-primary-600 text-xs focus-within:font-semibold font-normal duration-150">
+              <%= account_f.label :first_name %>
+              <%= account_f.text_field :first_name, class: 'text-sm pb-1.5 text-black font-normal w-full border-transparent focus:border-b-2 focus:border-transparent border-b-gray-400 focus:ring-0 p-0 focus:border-b-primary-500', autofocus: true, autocomplete: "first-name" %>
+            </div>
+            <% if resource.errors.full_messages_for(:'account.first_name').present? %>
+              <p class="text-danger-500 text-xs"><%= resource.errors.full_messages_for(:'account.first_name').first %></p>
+            <% end %>
+          </div>
+
+          <div class="flex flex-col gap-0.5">
+            <div class="focus-within:text-primary-600 text-xs focus-within:font-semibold font-normal duration-150">
+              <%= account_f.label :last_name %>
+              <%= account_f.text_field :last_name, class: 'text-sm pb-1.5 text-black font-normal w-full border-transparent focus:border-b-2 focus:border-transparent border-b-gray-400 focus:ring-0 p-0 focus:border-b-primary-500', autofocus: true, autocomplete: "first-name" %>
+            </div>
+            <% if resource.errors.full_messages_for(:'account.last_name').present? %>
+              <p class="text-danger-500 text-xs"><%= resource.errors.full_messages_for(:'account.last_name').first %></p>
+            <% end %>
+          </div>
+
+          <div class="flex flex-col gap-0.5">
+            <div class="focus-within:text-primary-600 text-xs focus-within:font-semibold font-normal duration-150">
+              <%= account_f.label :username %>
+              <%= account_f.text_field :username, class: 'text-sm pb-1.5 text-black font-normal w-full border-transparent focus:border-b-2 focus:border-transparent border-b-gray-400 focus:ring-0 p-0 focus:border-b-primary-500', autofocus: true, autocomplete: "first-name" %>
+            </div>
+            <% if resource.errors.full_messages_for(:'account.username').present? %>
+              <p class="text-danger-500 text-xs"><%= resource.errors.full_messages_for(:'account.username').first %></p>
+            <% end %>
+          </div>
+        <% end %>
+      </div>
+
+      <div class="flex flex-col gap-1.5 mt-5">
+        <%= f.submit "Sign Up", class: 'flex-1 border text-center py-1.5 rounded-full w-full hover:cursor-pointer bg-gradient-to-r from-secondary-500 to-primary-500 text-white font-bold' %>
+        <%= link_to 'Login', new_session_path(resource_name), class: 'flex-1 border text-center py-1.5 block rounded-full w-full text-gray-700 border-gray-400' %>
+      </div>
+    <% end %>
   </div>
+</section>
 
-  <div class="field">
-    <%= f.label :password %> <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <%= f.fields_for :account do |account_f| %>
-    <div class="field">
-      <%= account_f.label :first_name %><br />
-      <%= account_f.text_field :first_name, autocomplete: "first-name" %>
-    </div>
-
-    <div class="field">
-      <%= account_f.label :last_name %><br />
-      <%= account_f.text_field :last_name, autocomplete: "last-name" %>
-    </div>
-
-    <div class="field">
-      <%= account_f.label :username %><br />
-      <%= account_f.text_field :username, autocomplete: "username" %>
-    </div>
-  <% end %>
-
-  <div class="actions"><%= f.submit "Sign up" %></div>
-<% end %>
-
-<%= render "users/shared/links" %>
