--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,7 +1,9 @@
-<div>
-  <h1 class="text-4xl font-bold">Dashboard#index</h1>
-  <p>Find me in app/views/dashboard/index.html.erb</p>
-</div>
+<section class="container">
+  <div class="flex flex-row flex-wrap justify-center">
+    <div class="border p-6 rounded-xl flex-col gap-4 relative">
+      <h3 class="text-xl">Active Users</h3>
+      <p class="text-2xl"><%= @active_users_count %></p>
+    </div>
+  </div>
 
-<%= link_to 'Chats', :chats %>
-<%= link_to 'Group Chats', [:group, :chats] %>
+</section>
