--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="bg-primary-950 text-white px-8 pt-12 pb-4 mt-16">
+<footer class="bg-primary-950 text-white px-8 pt-12 pb-4">
   <div class="container">
     <div class="flex flex-col justify-between gap-8 md:flex-row">
       <div class="max-w-96">
