--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -1,11 +1,10 @@
-
-<section class="container flex items-center flex-col gap-4 my-20 text-primary-500">
+<section class="container flex items-center flex-col gap-4 my-20 text-primary-600">
   <h1 class="text-4xl font-black px-4"><%= t '.welcome' %></h1>
   <p class="text-center text-xl font-light px-6 w-96 md:w-[36rem]"><%= t '.introduction' %></p>
 </section>
 
 <section class="bg-primary-500 pt-12">
-  <div class="container overflow-hidden">
+  <div class="container">
     <h3 class="text-3xl font-black text-white text-center mb-8"><%= t '.services' %></h3>
 
     <ul class="flex flex-wrap justify-center items-start gap-8 pb-12">
