--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,6 +1,8 @@
 @import "font-awesome";
 @import "actiontext.css";
 @import "rouge.css";
+@import "glightbox.css";
+
 @import url("https://fonts.googleapis.com/css2?family=Sail&display=swap");
 
 /*
